solving using geometric mean

--- a/level_1/cfa_practice.ipynb
+++ b/level_1/cfa_practice.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO7mEdCH37SMcbYd6zOjiVC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +33,7 @@
       "metadata": {
         "id": "TlPjo-ZMbWr0"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -135,9 +134,39 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "r = [0.10, 0.05, -0.02, 0.12, 0.08]\n",
+        "num = 1\n",
+        "mult = 1\n",
+        "for ind in r:\n",
+        "  num += ind\n",
+        "  mult *= num\n",
+        "geo_mean = mult**(1/5) - 1\n",
+        "print(geo_mean)"
+      ],
+      "metadata": {
+        "id": "CE9C0cYTxKCU",
+        "outputId": "979b004b-4c17-4b64-c888-91bbb054ae31",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.18901169028368248\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "CE9C0cYTxKCU"
+        "id": "tRy_K5KA2QLG"
       },
       "execution_count": null,
       "outputs": []
