--- a/level_1/cfa_practice.ipynb
+++ b/level_1/cfa_practice.ipynb
@@ -33,7 +33,7 @@
       "metadata": {
         "id": "TlPjo-ZMbWr0"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -151,7 +151,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -166,7 +166,43 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "tRy_K5KA2QLG"
+        "id": "FB_zZiLcvmX2"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pv = 60000/(((1 + 0.07)**4 - 1)/0.07)\n",
+        "pv"
+      ],
+      "metadata": {
+        "id": "tRy_K5KA2QLG",
+        "outputId": "c7db4be1-94db-451c-caf9-7749501f45a8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "13513.687000035801"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "yz2Jm72zn0dq"
       },
       "execution_count": null,
       "outputs": []
