--- a/level_1/cfa_practice.ipynb
+++ b/level_1/cfa_practice.ipynb
@@ -168,33 +168,58 @@
       "metadata": {
         "id": "FB_zZiLcvmX2"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "pv = 60000/(((1 + 0.07)**4 - 1)/0.07)\n",
-        "pv"
+        "balance = 12343.04\n",
+        "pay = balance/(204.39*12)\n",
+        "print(f\"Pay off student loan balance in {pay:.4f} years\")"
       ],
       "metadata": {
         "id": "tRy_K5KA2QLG",
-        "outputId": "c7db4be1-94db-451c-caf9-7749501f45a8",
+        "outputId": "b44998fd-8911-479a-f2f8-4ac6d8f77669",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Pay off student loan balance in 5.0325 years\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "year_pay = 204.39*12\n",
+        "year_pay"
+      ],
+      "metadata": {
+        "id": "yz2Jm72zn0dq",
+        "outputId": "e43579bf-a790-49cb-c732-d9540147a4b5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "13513.687000035801"
+              "2452.68"
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 28
         }
       ]
     },
@@ -202,7 +227,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "yz2Jm72zn0dq"
+        "id": "sXdHGxNKL3TM"
       },
       "execution_count": null,
       "outputs": []
