--- a/level_1/cfa_practice.ipynb
+++ b/level_1/cfa_practice.ipynb
@@ -185,7 +185,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -209,7 +209,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -225,9 +225,70 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# NPV\n",
+        "npv_x = (40/(1.1) + 40/(1.1)**2 + 40/(1.1)**3 + 40/(1.1)**4)\n",
+        "npv_x\n",
+        "\n",
+        "npv_y = (20/(1.1) + 30/(1.1)**2 + 50/(1.1)**3 + 60/(1.1)**4)\n",
+        "npv_y\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "sXdHGxNKL3TM",
+        "outputId": "8981c374-4087-4292-d551-208987cd6745",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "121.52175397855333"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Gordon Growth Model (Dividend Discount Model)\n",
+        "d1 = 2*(1 + 0.05)\n",
+        "stock = d1/(0.1 - 0.05)\n",
+        "stock"
+      ],
+      "metadata": {
+        "id": "Gp0XvtxTJFoV",
+        "outputId": "f6afb39f-3cca-4604-b3dd-496013a69b3f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "42.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "sXdHGxNKL3TM"
+        "id": "7p5T-YiaOTD7"
       },
       "execution_count": null,
       "outputs": []
