--- a/level_1/cfa_practice.ipynb
+++ b/level_1/cfa_practice.ipynb
@@ -33,7 +33,7 @@
       "metadata": {
         "id": "TlPjo-ZMbWr0"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -241,7 +241,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -270,7 +270,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -286,9 +286,35 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "0.03 - 1.2*(0.06)"
+      ],
+      "metadata": {
+        "id": "7p5T-YiaOTD7",
+        "outputId": "bdbd731a-2468-4db4-c56e-57767842a5fe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-0.041999999999999996"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "7p5T-YiaOTD7"
+        "id": "a07t_hCN-78y"
       },
       "execution_count": null,
       "outputs": []
