--- a/level_1/cfa_practice.ipynb
+++ b/level_1/cfa_practice.ipynb
@@ -287,26 +287,27 @@
     {
       "cell_type": "code",
       "source": [
-        "0.03 - 1.2*(0.06)"
+        "# Duration and convexity with basis points\n",
+        "8.5*(-0.01) + (0.5*120*(-0.01)**2)"
       ],
       "metadata": {
         "id": "7p5T-YiaOTD7",
-        "outputId": "bdbd731a-2468-4db4-c56e-57767842a5fe",
+        "outputId": "e3334672-3ccf-45d7-a782-d22a1beafa92",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "-0.041999999999999996"
+              "-0.079"
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 10
         }
       ]
     },
