--- a/level_1/cfa_practice.ipynb
+++ b/level_1/cfa_practice.ipynb
@@ -297,7 +297,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -308,6 +308,62 @@
           },
           "metadata": {},
           "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# WACC\n",
+        "wacc = (.40/.60)*(.12) + (.40/100)*(.08)*(1 - .25)\n",
+        "wacc"
+      ],
+      "metadata": {
+        "id": "DQdKpz6Vb7Rt",
+        "outputId": "fdf4695e-a559-4330-a2ed-2b97276e3a2f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.08024"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Sharp ratio\n",
+        "sp = (.12-.03)/.15\n",
+        "sp"
+      ],
+      "metadata": {
+        "id": "gnz4VFUvkMNu",
+        "outputId": "810da577-5db1-4c8d-b87e-256957962583",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
         }
       ]
     },
