--- a/level_1/cfa_practice.ipynb
+++ b/level_1/cfa_practice.ipynb
@@ -325,7 +325,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -353,7 +353,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -369,9 +369,124 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# Time Value of Money\n",
+        "pv = 100000/(1.06)**5\n",
+        "pv"
+      ],
+      "metadata": {
+        "id": "a07t_hCN-78y",
+        "outputId": "b7f9052a-e7c4-44c5-de90-0d1757268a9b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "74725.8172866057"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fv = 100\n",
+        "t = 5\n",
+        "ytm = 6/100\n",
+        "\n",
+        "bp = fv/(1 + ytm)**t\n",
+        "bp"
+      ],
+      "metadata": {
+        "id": "cEmsVhlZtSeb",
+        "outputId": "7dadcf08-77bf-4344-8392-66d545a4176e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "74.7258172866057"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# FV\n",
+        "fv = 1000*(1 + 0.05)**2\n",
+        "fv\n"
+      ],
+      "metadata": {
+        "id": "NrOiYhNz6JcW",
+        "outputId": "afc49923-32f9-417a-f724-69a83caa1d52",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1102.5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# WACC\n",
+        "wacc = .6*.1 + .6*.6*.7\n",
+        "wacc"
+      ],
+      "metadata": {
+        "id": "Yjop8BnG-Mid",
+        "outputId": "0d49d30a-3376-4ee2-a308-d80f84e03797",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.312"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "a07t_hCN-78y"
+        "id": "krDT0zsdDoKs"
       },
       "execution_count": null,
       "outputs": []
