--- a/level_1/cfa_practice.ipynb
+++ b/level_1/cfa_practice.ipynb
@@ -259,28 +259,28 @@
       "cell_type": "code",
       "source": [
         "# Gordon Growth Model (Dividend Discount Model)\n",
-        "d1 = 2*(1 + 0.05)\n",
-        "stock = d1/(0.1 - 0.05)\n",
+        "d1 = 2*(1 + 0.09)\n",
+        "stock = d1/(0.09 - 0.04)\n",
         "stock"
       ],
       "metadata": {
         "id": "Gp0XvtxTJFoV",
-        "outputId": "f6afb39f-3cca-4604-b3dd-496013a69b3f",
+        "outputId": "8164375d-82d7-46fe-bfc2-183b6ab9baab",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "42.0"
+              "43.60000000000001"
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 5
         }
       ]
     },
@@ -308,34 +308,6 @@
           },
           "metadata": {},
           "execution_count": 10
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# WACC\n",
-        "wacc = (.40/.60)*(.12) + (.40/100)*(.08)*(1 - .25)\n",
-        "wacc"
-      ],
-      "metadata": {
-        "id": "DQdKpz6Vb7Rt",
-        "outputId": "fdf4695e-a559-4330-a2ed-2b97276e3a2f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.08024"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 2
         }
       ]
     },
@@ -381,7 +353,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -412,7 +384,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -440,7 +412,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -458,12 +430,12 @@
       "cell_type": "code",
       "source": [
         "# WACC\n",
-        "wacc = .6*.1 + .6*.6*.7\n",
+        "wacc = (.6/.1)*.1 + (.4/.1)*(.06)*(1 - .3)\n",
         "wacc"
       ],
       "metadata": {
         "id": "Yjop8BnG-Mid",
-        "outputId": "0d49d30a-3376-4ee2-a308-d80f84e03797",
+        "outputId": "505f705e-6d92-45fc-c08d-1583cfa54d59",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -474,7 +446,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.312"
+              "0.768"
             ]
           },
           "metadata": {},
@@ -484,9 +456,37 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# Gordon Growth Model\n",
+        "d1 = 2*(0.05)\n",
+        "d1"
+      ],
+      "metadata": {
+        "id": "krDT0zsdDoKs",
+        "outputId": "314271b7-c4d9-4482-e236-29d79044c44f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "krDT0zsdDoKs"
+        "id": "wRzKcEndasno"
       },
       "execution_count": null,
       "outputs": []
