--- a/level_1/cfa_practice.ipynb
+++ b/level_1/cfa_practice.ipynb
@@ -270,7 +270,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -440,7 +440,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -468,7 +468,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -484,9 +484,37 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# Discounted Cash Flow\n",
+        "pv = 100/((1.05)**3)\n",
+        "pv"
+      ],
+      "metadata": {
+        "id": "wRzKcEndasno",
+        "outputId": "2f727762-d689-4b9a-8ccf-b706d5d21bda",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "86.3837598531476"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "wRzKcEndasno"
+        "id": "LydH-RGgEQET"
       },
       "execution_count": null,
       "outputs": []
